Alignement rubriques de droite, correction2

--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -81,7 +81,7 @@
 
 .section-style-2() {
   // width: calc(100% - 5px);
-  min-width: 600px;
+  min-width: 635px;
   float: none;
   flex-direction: column;
   border: 1px solid @color-primary;
@@ -290,7 +290,7 @@ body {
         // width: 625px;
         margin-left: 473px;
         // width: 100%;
-        min-width: 600px;
+        min-width: 635px;
         // float: left;
       }
 
@@ -315,10 +315,7 @@ body {
       // Sections principales avec mixin
       .eminence-personnage,
       .eminence-harmoniques,
-      .eminence-conscience,
-      .eminence-timbre,
-      .eminence-timbre-2,
-      .eminence-recapitulatif {
+      .eminence-conscience{
         .section-style();
       }
 
@@ -327,10 +324,12 @@ body {
       .eminence-maitrises,
       .eminence-pouvoirs-2,
       .eminence-atouts-2,
-      .eminence-maitrises-2 {
+      .eminence-maitrises-2,
+      .eminence-timbre,
+      .eminence-timbre-2,
+      .eminence-recapitulatif {
         .section-style-2();
       }
-
 
       // Police des textes verticaux
       .text-vertical-personnage,
